Add logging and fix the optional url and host

--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,5 @@
-distributionUrl=https\://services.gradle.org/distributions/gradle-7.2-bin.zip
+#distributionUrl=https\://services.gradle.org/distributions/gradle-7.2-bin.zip
+distributionUrl=https\://jitpack.io/com/github/johnlayton/jessopstreet/0.0.1/jessopstreet-0.0.1.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStorePath=wrapper/dists
