Update to use the previous release as the gradle for this build

--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,5 @@
-distributionUrl=https\://services.gradle.org/distributions/gradle-7.2-bin.zip
-#distributionUrl=https\://jitpack.io/com/github/johnlayton/jessopstreet/0.0.1/jessopstreet-0.0.1.zip
+#distributionUrl=https\://services.gradle.org/distributions/gradle-7.2-bin.zip
+distributionUrl=https\://jitpack.io/com/github/johnlayton/jessopstreet/bundle/0.0.2/bundle-0.0.2.zip
 #distributionUrl=file:///Users/johnlayton/.m2/repository/com/github/johnlayton/bundle/0.0.2-SNAPSHOT/bundle-0.0.2-SNAPSHOT.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
